2013-11-21  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/53976
	* gcc.target/sh/pr53976-1.c: New.

2013-11-20  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR libfortran/49024
	* gfortran.dg/erf_3.F90: New file.

2013-11-20  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gcc.target/powerpc/pr48258-1.c: Skip for little endian.

2013-11-20  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/59133
	* gcc.target/i386/pr59133.c: New.

2013-11-20  Joseph Myers  <joseph@codesourcery.com>

	PR middle-end/21718
	* gcc.dg/float-exact-1.c: New test.

2013-11-20  Richard Earnshaw  <rearnsha@arm.com>

	PR rtl-optimization/54300
	* gcc.target/arm/pr54300.C: New test.

2013-11-20  Diego Novillo  <dnovillo@google.com>

	PR 59212
	* g++.dg/plugin/selfassign.c: Include stringpool.h

2013-11-20  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* gcc.target/powerpc/darwin-longlong.c (msw): Make endian-safe.

2013-11-20  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/htm-1.c: Rename to ...
	* gcc/testsuite/gcc.target/s390/htm-builtins-compile-1.c: ... this
	one.
	* gcc.target/s390/htm-xl-intrin-1.c: Rename to ...
	* gcc.target/s390/htm-builtins-compile-3.c: ... this one.
	* gcc.target/s390/htm-builtins-compile-2.c: New testcase.
	* gcc.target/s390/htm-builtins-1.c: New testcase.
	* gcc.target/s390/htm-builtins-2.c: New testcase.
	* gcc.target/s390/s390.exp: Add check for htm machine.

2013-11-19  Joshua J Cogliati  <jrincayc@yahoo.com>

	PR c/53001
	* c-c++-common/Wfloat-conversion.c: Copies relevant
	tests from c-c++-common/Wconversion-real.c,
	gcc.dg/Wconversion-real-integer.c and gcc.dg/pr35635.c into
	new testcase for conversions that are warned about by
	-Wfloat-conversion.

2013-11-19  Martin Jambor  <mjambor@suse.cz>

	PR rtl-optimization/59099
	* gcc.target/i386/pr59099.c: New test.

2013-11-19  Sriraman Tallam  <tmsriram@google.com>

	* gcc.dg/tree-prof/cold_partition_label.c: New testcase.

2013-11-19  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
